# block-memory-allocator

./: CMakeLists.txt  Makefile  README.md
inc/block-memory-allocator/: allocator.hh  block-memory-allocator.h  block.hh  i-controller.hh  interface.h  simple-stack.h  utils.hh
src/: allocator.cc  block-memory-allocator.c  block.cc  simple-stack.c
tests/: CMakeLists.txt  tests.cc
